--- a/app/views/trackers/new.html.erb
+++ b/app/views/trackers/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Trackers#new</h1>
-<p>Find me in app/views/trackers/new.html.erb</p>
+<% provide(:title, "Create New Tracker") %>
+    <h1>New Tracker</h1>
+    <p>
+    	Create 'em here!
+    </p>
