--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Trackers#index</h1>
-<p>Find me in app/views/trackers/index.html.erb</p>
+<% provide(:title, "View all Trackers") %>
+    <h1>All Trackers</h1>
+    <p>
+    	See 'em here!
+    </p>
