we can create campaigns

--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "View all Trackers") %>
+<% provide(:title, "View all Campaigns") %>
     <h1>All Trackers</h1>
     <p>
     	See 'em here!
