--- a/app/views/trackers/new.html.erb
+++ b/app/views/trackers/new.html.erb
@@ -2,21 +2,14 @@
     <h1>New Campaign</h1>
     	<div class="row">
     		<div class="col-md-6 col-md-offset-3">
-    			<%= form_for(@tracker) do |f| %>
+    			<%= form_for(@tracker, url: new_tracker_path) do |f| %>
+                    <%= render '/shared/error_messages' %>
+
     				<%= f.label :name %>
-    				<%= f.text_field :name %>
+    				<%= f.text_field :name, class: 'form-control' %>
 
     				<%= f.label :keywords %>
-    				<%= f.text_field :keywords %>
-
-    				<%= f.check_box :enabled %> <%= f.label :enabled %>
-    				
-
-    				<%= f.radio_button :look_in, 'Comments' %> <%= f.label :look_in, 'Comments', :value => 1 %>
-    				<%= f.radio_button :look_in, 'Submissions' %>
-    				<%= f.label :look_in, 'Submissions', :value => 2 %>
-    				<%= f.radio_button :look_in, 'Both' %>
-    				<%= f.label :look_in, 'Both', :value => 3 %>
+    				<%= f.text_field :keywords, class: 'form-control' %>
 
     				<%= f.submit "Create New Campaign", class: "btn btn-primary" %>
     			<% end %>
