--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
       	<%= link_to("ReddTrax", '#', id: 'logo')%>
       	<nav>
       		<ul class="nav navbar-nav navbar-right">
-			    <li><%= link_to "Home",   '#' %></li>
-			    <li><%= link_to "Campaigns",   '#' %></li>
+			    <li><%= link_to "Home",   root_path %></li>
+			    <li><%= link_to "Campaigns",   trackers_path %></li>
 			    <li><%= link_to "Help", '#' %></li>
       		</ul>
       	</nav>
