--- a/app/views/trackers/new.html.erb
+++ b/app/views/trackers/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Create New Campaign") %>
-    <h1>New Campaign</h1>
+    <h1><%= @tracker.name %></h1>
     	<div class="row">
     		<div class="col-md-6 col-md-offset-3">
     			<%= form_for(@tracker, url: new_tracker_path) do |f| %>
@@ -10,6 +10,7 @@
 
     				<%= f.label :keywords %>
     				<%= f.text_field :keywords, class: 'form-control' %>
+
 
     				<%= f.submit "Create New Campaign", class: "btn btn-primary" %>
     			<% end %>
